[gd_scene load_steps=5 format=1]

[ext_resource path="res://PSO/driver.gd" type="Script" id=1]
[ext_resource path="res://PSO/scenes/PSO.tscn" type="PackedScene" id=2]
[ext_resource path="res://PSO/scripts/PSO_inst.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="PSO" parent="." instance=ExtResource( 2 )]

[node name="PSO_inst" type="Node" parent="PSO"]

script/script = ExtResource( 3 )

[node name="goal" type="Sprite" parent="."]

transform/pos = Vector2( 500, 250 )
texture = ExtResource( 4 )

[connection signal="eval_fitness" from="PSO" to="PSO/PSO_inst" method="eval_fitness"]

[connection signal="update_fitness" from="PSO" to="PSO/PSO_inst" method="update_fitness"]

[connection signal="update_particles" from="PSO" to="PSO/PSO_inst" method="update_particles"]


